# operating-systems

./: CMakeLists.txt  LICENSE  main.c
lab1/: child.c  main.c  main.h
lab2/: main.c  main.h
lab3/: child.c  main.c  main.h
lab4/: buddy.c  buddy.h  main.c  main.h  mkk.c  mkk.h
lab4/allocators/: buddy.c  buddy.h  emergency.c  emergency.h  mkk.c
utility/: array.c  array.h  error_handler.c  error_handler.h  universal.c  universal.h
